--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/dabinj96/Arsenal_Fan_Hub/issues"
   },
-  "homepage": "https://github.com/dabinj96/Arsenal_Fan_Hub#readme"
+  "homepage": "https://github.com/dabinj96/Arsenal_Fan_Hub#readme",
+  "dependencies": {
+    "axios": "^1.8.2",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
