--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "homepage": "https://github.com/dabinj96/Arsenal_Fan_Hub#readme",
   "dependencies": {
     "axios": "^1.8.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "node-cron": "^3.0.3",
-    "pg": "^8.13.3"
+    "pg": "^8.13.3",
+    "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
